# rra-building-density

./: .cruft.json  .gitignore  README.md  mkdocs.yml  pyproject.toml  pyproject.toml.rej
docs/: new_version.md
src/rra_building_density/: cli.py  cli_options.py  constants.py  data.py  utils.py
src/rra_building_density/diagnostics/: __init__.py  building_density_diagnostics.py  plot_building_density.py  plot_utils.py
src/rra_building_density/diagnostics/old_building_density_diagnostics/: building_density_scatters_notebook.py  building_density_time_series_notebook.py  built_area_variance.py  gridded_pop_compare_notebook.py
src/rra_building_density/extract/: __init__.py  ghsl.py  microsoft.py
src/rra_building_density/format/: __init__.py  ghsl.py  microsoft.py  prepare_tile_index.py
src/rra_building_density/postprocess/: __init__.py  summarize.py
src/rra_building_density/postprocess/diagnostics/: building_density_diagnostics.py  plot_building_density.py  plot_utils.py  utils.py
src/rra_building_density/process/: __init__.py  ghsl.py  microsoft.py  tile_index.py  utils.py
tests/: test_rra_building_density.py
